# UAP_Machine-Learning

./: README.md  app.py  pyproject.toml  requirements.txt
Code/: UAP_Machine_Learning_CNN.ipynb  UAP_Machine_Learning_MobileNet.ipynb
src/: app.py
