[project]
name = "UAP"
version = "0.1.0"
description = "UJIAN_AKHIR_PRAKTIKUM"
authors = [
    {name = "", email = "alfa10ghiffari@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
start = "streamlit run ./src/app.py"